added header layout responsive

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,9 +10,33 @@
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css' integrity='sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==' crossorigin='anonymous'/>
     <!-- MY STYLE CSS-->
     <link rel="stylesheet" href="css/style.css">
+    <!-- FAVICON-->
+    <link rel="icon" href="img/favicon-bootstrap.png">
     <title>Start Bootstrap</title>
 </head>
 <body>
-    
+    <header>
+        <div class="navbar d-flex p-3 justify-content-between">
+            <div>
+                <a href="#">link</a>
+            </div>
+            <div class="d-md-none">
+                <a href="#">link</a>
+            </div>
+            <div class="d-sm-none d-md-block">
+                <a href="#">link</a>
+                <a href="#">link</a>
+                <a href="#">link</a>
+            </div>
+        </div>
+        <div class="jumbotron d-flex flex-column justify-content-center align-items-center">
+            <div class="my-3">img</div>
+            <h1 class="my-3">element 1</h1>
+            <div class="my-3">element 2</div>
+            <h3 class="my-3">element 3</h3>
+        </div>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
