added gallery layout resposive

--- a/index.html
+++ b/index.html
@@ -15,20 +15,25 @@
     <title>Start Bootstrap</title>
 </head>
 <body>
+    <!-- HEADER -->
     <header>
-        <div class="navbar d-flex p-3 justify-content-between">
-            <div>
-                <a href="#">link</a>
-            </div>
-            <div class="d-md-none">
-                <a href="#">link</a>
-            </div>
-            <div class="d-sm-none d-md-block">
-                <a href="#">link</a>
-                <a href="#">link</a>
-                <a href="#">link</a>
+        <!-- NAVBAR -->
+        <div class="navbar">
+            <div class="container-sm d-flex p-3 justify-content-between">
+                <div>
+                    <a href="#">link</a>
+                </div>
+                <div class="d-md-none">
+                    <a href="#">link</a>
+                </div>
+                <div class="d-sm-none d-md-block">
+                    <a href="#">link</a>
+                    <a href="#">link</a>
+                    <a href="#">link</a>
+                </div>
             </div>
         </div>
+        <!-- JUMBOTRON-->
         <div class="jumbotron d-flex flex-column justify-content-center align-items-center">
             <div class="my-3">img</div>
             <h1 class="my-3">element 1</h1>
@@ -36,7 +41,40 @@
             <h3 class="my-3">element 3</h3>
         </div>
     </header>
-    <main></main>
+    <!-- MAIN SECTIONS-->
+    <main>
+        <!-- GALLERY SECTION-->
+        <section>
+            <div class="container-sm">
+                <!-- GALLERY TITLE-->
+                <div class="title-gallery text-center my-3">
+                    <h2>title</h2>
+                    <div>line</div>
+                </div>
+                <!-- GALLERY GRILL -->
+                <div class="row">
+                    <div class="col-sm-12 col-md-6 col-lg-4">
+                        <div>img</div>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-4">
+                        <div>img</div>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-4">
+                        <div>img</div>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-4">
+                        <div>img</div>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-4">
+                        <div>img</div>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-4">
+                        <div>img</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
