--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
                 </div>
             </div>
         </section>
+        <!-- ABOUT US SECTION-->
+        <section>
+            <div class="container-sm">
+                
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
