--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
     <header>
         <!-- NAVBAR -->
         <div class="navbar">
-            <div class="container-sm d-flex p-3 justify-content-between">
+            <div class="container-sm d-flex p-3 justify-content-between text-uppercase">
                 <div>
-                    <a href="#">link</a>
+                    <a href="#">start bootstrap</a>
                 </div>
                 <div class="d-md-none">
-                    <a href="#">link</a>
+                    <a href="#"><i class="fa-solid fa-bars"></i></a>
                 </div>
                 <div class="d-sm-none d-md-block">
-                    <a href="#">link</a>
-                    <a href="#">link</a>
-                    <a href="#">link</a>
+                    <a href="#">Portfolio</a>
+                    <a href="#">About</a>
+                    <a href="#">Contact</a>
                 </div>
             </div>
         </div>
@@ -77,7 +77,7 @@
         <!-- ABOUT US SECTION-->
         <section>
             <div class="container-sm">
-                
+
             </div>
         </section>
     </main>
