added element jumbotron

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         </div>
         <!-- JUMBOTRON-->
         <div class="jumbotron d-flex flex-column justify-content-center align-items-center">
-            <div class="my-3">img</div>
-            <h1 class="my-3">element 1</h1>
+            <div class="my-3"><img src="img/avatar.svg" alt="avatar jumbo"></div>
+            <h1 class="my-3">Start Bootstrap</h1>
             <div class="my-3">element 2</div>
-            <h3 class="my-3">element 3</h3>
+            <h3 class="my-3">Graphic artist - Web designer - Illustrator</h3>
         </div>
     </header>
     <!-- MAIN SECTIONS-->
