--- a/index.html
+++ b/index.html
@@ -34,16 +34,20 @@
             </div>
         </div>
         <!-- JUMBOTRON-->
-        <div class="jumbotron d-flex flex-column justify-content-center align-items-center">
+        <div class="jumbotron d-flex flex-column justify-content-center align-items-center text-uppercase text-white">
             <div class="my-3"><img src="img/avatar.svg" alt="avatar jumbo"></div>
             <h1 class="my-3">Start Bootstrap</h1>
-            <div class="my-3">element 2</div>
+            <div class="my-3">
+                <span class="border"></span>
+                <span><i class="fa-solid fa-star"></i></span>
+                <span class="border"></span>
+            </div>
             <h3 class="my-3">Graphic artist - Web designer - Illustrator</h3>
         </div>
     </header>
     <!-- MAIN SECTIONS-->
     <main>
-        <!-- GALLERY SECTION-->
+        <!-- GALLERY SECTION -->
         <section>
             <div class="container-sm">
                 <!-- GALLERY TITLE-->
