added jumbotron responsive

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         <!-- JUMBOTRON-->
         <div class="jumbotron d-flex flex-column justify-content-center align-items-center text-uppercase text-white">
-            <div class="my-3"><img src="img/avatar.svg" alt="avatar jumbo"></div>
+            <div class="my-3"><img src="img/avatar.svg" class="img-fluid" alt="avatar jumbo"></div>
             <h1 class="my-3">Start Bootstrap</h1>
             <div class="my-3">
                 <span class="border"></span>
