added portfolio section responsive

--- a/index.html
+++ b/index.html
@@ -47,33 +47,33 @@
     </header>
     <!-- MAIN SECTIONS-->
     <main>
-        <!-- GALLERY SECTION -->
+        <!-- PORTFOLIO SECTION -->
         <section>
             <div class="container-sm">
-                <!-- GALLERY TITLE-->
-                <div class="title-gallery text-center my-3">
-                    <h2>title</h2>
+                <!-- PORTFOLIO TITLE-->
+                <div class="title-gallery text-center my-3 text-uppercase">
+                    <h2>Portfolio</h2>
                     <div>line</div>
                 </div>
-                <!-- GALLERY GRILL -->
-                <div class="row">
+                <!-- PORTFOLIO GRILL -->
+                <div class="row gy-4">
                     <div class="col-sm-12 col-md-6 col-lg-4">
-                        <div>img</div>
+                        <div><img src="img/cabin.png" class="img-fluid" alt="cabin"></div>
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-4">
-                        <div>img</div>
+                        <div><img src="img/cake.png" class="img-fluid" alt="cake"></div>
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-4">
-                        <div>img</div>
+                        <div><img src="img/circus.png" class="img-fluid" alt="circus"></div>
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-4">
-                        <div>img</div>
+                        <div><img src="img/game.png" class="img-fluid" alt="game"></div>
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-4">
-                        <div>img</div>
+                        <div><img src="img/safe.png" class="img-fluid" alt="safe"></div>
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-4">
-                        <div>img</div>
+                        <div><img src="img/submarine.png" class="img-fluid" alt="submarine"></div>
                     </div>
                 </div>
             </div>
