added about section responsive

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <div>line</div>
                 </div>
                 <!-- PORTFOLIO GRILL -->
-                <div class="row gy-4">
+                <div class="row gy-4 my-4">
                     <div class="col-sm-12 col-md-6 col-lg-4">
                         <div><img src="img/cabin.png" class="img-fluid" alt="cabin"></div>
                     </div>
@@ -79,9 +79,29 @@
             </div>
         </section>
         <!-- ABOUT US SECTION-->
-        <section>
+        <section id="about">
             <div class="container-sm">
-
+                <div class="row text-white my-4">
+                    <div class="col-sm-12 text-center text-uppercase my-3">
+                        <h2>About</h2>
+                    </div>
+                    <div class="col-sm-12 text-center my-3">
+                        <span></span>
+                        <span><i class="fa-solid fa-star"></i></span>
+                        <span></span>
+                    </div>
+                    <div class="col-sm-12 text-center col-md-6">
+                        <p>Freelancer is a free bootstrap theme created by Start Bootstrap.
+                            The download includes the complete source files including
+                            HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    </div>
+                    <div class="col-sm-12 text-center col-md-6">
+                        <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the pérfect starting point!</p>
+                    </div>
+                    <div class="col-sm-12 text-center my-4">
+                        <a href="#" class="btn btn-outline-success"><i class="fa-solid fa-download px-3"></i>Download</a>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
