--- a/index.html
+++ b/index.html
@@ -104,6 +104,40 @@
                 </div>
             </div>
         </section>
+        <!-- CONTACT ME SECTION-->
+        <section id="contacts">
+            <div class="container-sm">
+                <div class="row">
+                    <div class="col-sm-12 text-center text-uppercase">
+                        <h2>Contact me</h2>
+                    </div>
+                    <div class="col-sm-12 text-center">
+                        <span></span>
+                        <span><i class="fa-solid fa-star"></i></span>
+                        <span></span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col offset-lg-2 col-lg-8">
+                        <form>
+                            <div class="mb-1">
+                                <input type="text" class="ps-0 form-control" placeholder="Name">
+                            </div>
+                            <div class="mb-1">
+                                <input type="text" class="ps-0 form-control" placeholder="Email Addres">
+                            </div>
+                            <div class="mb-1">
+                                <input type="text" class="ps-0 form-control" placeholder="Phone Number">
+                            </div>
+                            <div class="mb-3">
+                                <textarea class="ps-0 form-control" placeholder="Message"></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-success">Send</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
