added footer responsive

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </div>
         </section>
         <!-- CONTACT ME SECTION-->
-        <section id="contacts">
+        <section id="contacts" class="my-4">
             <div class="container-sm">
                 <div class="row">
                     <div class="col-sm-12 text-center text-uppercase">
@@ -138,7 +138,36 @@
                 </div>
             </div>
         </section>
+        <!-- INFO SECTION -->
+        <section id="info">
+            <div class="container-sm">
+                <div class="row py-4 text-white text-center">
+                    <div class="col-sm-12 col-md-4 py-2">
+                        <h2>LOCATION</h2>
+                        <address>
+                            <span>2215 John Daniel Drive Clark,</span><br>
+                            <span>MO 54243</span>
+                        </address>
+                    </div>
+                    <div class="col-sm-12 col-md-4 py-2">
+                        <h2>AROUND THE WEB</h2>
+                        <div>
+                            <i class="fa-brands fa-facebook pe-4"></i>
+                            <i class="fa-brands fa-google-plus pe-4"></i>
+                            <i class="fa-brands fa-twitter pe-4"></i>
+                            <i class="fa-brands fa-linkedin pe-4"></i>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-4 py-2">
+                        <h2>ABOUT FREELENCER</h2>
+                        <p>Freelence is a free to use, oper source Bootstrap theme created by <span class="text-success">Start Bootstrap</span></p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-    <footer></footer>
+    <footer class="d-flex justify-content-center align-items-center text-white">
+        <small>Copyright &copy; Your Website 2019</small>
+    </footer>
 </body>
 </html>
