--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
             <div class="my-3"><img src="img/avatar.svg" class="img-fluid" alt="avatar jumbo"></div>
             <h1 class="my-3">Start Bootstrap</h1>
             <div class="my-3">
-                <span class="border"></span>
-                <span><i class="fa-solid fa-star"></i></span>
-                <span class="border"></span>
+                <div class="divider"><i class="fa-solid fa-star"></i></div>
             </div>
             <h3 class="my-3">Graphic artist - Web designer - Illustrator</h3>
         </div>
@@ -53,7 +51,7 @@
                 <!-- PORTFOLIO TITLE-->
                 <div class="title-gallery text-center my-3 text-uppercase">
                     <h2>Portfolio</h2>
-                    <div>line</div>
+                    <div class="divider"><i class="fa-solid fa-star"></i></div>
                 </div>
                 <!-- PORTFOLIO GRILL -->
                 <div class="row gy-4 my-4">
@@ -112,9 +110,7 @@
                         <h2>Contact me</h2>
                     </div>
                     <div class="col-sm-12 text-center">
-                        <span></span>
-                        <span><i class="fa-solid fa-star"></i></span>
-                        <span></span>
+                        <div class="divider"><i class="fa-solid fa-star"></i></div>
                     </div>
                 </div>
                 <div class="row">
